--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for comp7940-group on 2024-03-26T16:37:03+08:00
+# fly.toml app configuration file generated for comp7940-group on 2024-03-26T17:39:34+08:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -7,28 +7,14 @@ app = 'comp7940-group'
 primary_region = 'hkg'
 
 [build]
-  builder = 'paketobuildpacks/builder:base'
 
-[env]
-  PORT = '8080'
-
-[[services]]
-  internal_port = 8000
-  protocol = 'tcp'
-
-  [services.concurrency]
-    hard_limit = 25
-    soft_limit = 20
-    type = "connections"
-
-  [[services.ports]]
-    port = 443
-    handlers = ['tls', 'http']
-
-  [[services.ports]]
-    handlers = ["http"]
-    port = 80
+[http_service]
+  internal_port = 8080
+  force_https = true
+  auto_stop_machines = true
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
 [[vm]]
   size = 'shared-cpu-1x'
-
