--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,7 +35,7 @@ env:
   ECR_REPOSITORY: comp7940          # set this to your Amazon ECR repository name
   ECS_SERVICE: comp7940-lab               # set this to your Amazon ECS service name
   ECS_CLUSTER: comp7940lab                # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: comp7940-group/aws.json      # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: aws.json      # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: comp7940          # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
